# soarm_ros2

./: .gitignore  LICENSE
soarm_control/: CMakeLists.txt  package.xml
soarm_control/config/: so101_controllers.yaml
soarm_control/launch/: arm.launch.py  soarm.launch.py
soarm_description/: CMakeLists.txt  package.xml
soarm_description/launch/: soarm.launch.py
soarm_description/urdf/so100/: so100.common.xacro  so100.control.xacro  so100.urdf  so100.urdf.xacro
soarm_description/urdf/so101/: so101.common.xacro  so101.control.xacro  so101.urdf  so101.urdf.xacro
